syntax = "proto2";

package remote;

message FieldGeometry {
    required float field_size_x = 1;
    required float field_size_y = 2;
    optional float boundary_width = 3;
    optional float defense_size_x = 4;
    optional float defense_size_y = 5;
    optional float goal_width = 6;
}

message GameState {
    optional string yellow_team_name = 2;
    optional string blue_team_name = 3;
}

// Human-readable names for the ids used in regular updates
message VisMappings {
    map<uint32, string> source = 1;
    map<uint32, string> name = 2;
}

// Whitelist for visualizations, used to apply per-client filtering before sending.
// Different id filters per source should be handled client-side.
message VisualizationFilter {
    repeated uint32 allowed_vis_source = 1;
    repeated uint32 allowed_vis_id = 2;
}

// ==== World State ====

message WorldState {
    // Timestamp used for client-side state filtering and buffer time adjustments
    optional uint64 timestamp = 1;
    repeated Ball ball = 2;
    repeated Robot yellow_robot = 3;
    repeated Robot blue_robot = 4;
}

message Robot {
    required uint32 id = 1;
    required float p_x = 2;
    required float p_y = 3;
    required float phi = 4;
}

message Ball {
    required float p_x = 1;
    required float p_y = 2;
    optional float p_z = 3;
}

// ==== Visualizations ====

message VisualizationUpdate {
    // The visualization group this update applies to. No vis group means the update includes all visualizations.
    optional VisualizationGroup visualization_group = 1;
    repeated VisualizationSet visualization_set = 2;
}

// An update packet with a group contains all visualizations where `vis_id % group_count == group`
message VisualizationGroup {
    required uint32 group = 1;
    required uint32 group_count = 2;
}

message VisualizationSet {
    // Shorthand source id. A human readable name is included in the VisMappings.
    optional uint32 source = 1;
    repeated Visualization visualization = 2;
}

message Visualization {
    // Shorthand name id. A human readable name is included in the VisMappings.
    required uint32 id = 1;
    repeated VisPart part = 2;
}

message VisPart {
    optional BorderStyle border_style = 1;
    optional Color fill_color = 2;
    oneof geom {
        Circle circle = 3;
        Polygon polygon = 4;
        Path path = 5;
    }
}

message BorderStyle {
    enum Style {
        DashLine = 1;
        DotLine = 2;
        DashDotLine = 3;
        DashDotDotLine = 4;
    }

    optional Style style = 1;
    optional Color color = 2;
}

message Color {
    required uint32 red = 1 [default = 0];
    required uint32 green = 2 [default = 0];
    required uint32 blue = 3 [default = 0];
    required uint32 alpha = 4 [default = 255];
}

message Circle {
    required float p_x = 1;
    required float p_y = 2;
    required float radius = 3;
}

message Point {
    required float x = 1;
    required float y = 2;
}

message Polygon {
    repeated Point point = 1;
}

message Path {
    repeated Point point = 1;
}
